Replace profile picture with new one. Fix profile picture position to prevent layout shift. Replace old with new portfolio slogan.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -249,8 +249,9 @@ section .mat-icon {
   .container-with-elements > * {
     margin: 12px !important;
   }
-  .hero-section .container-with-elements {
-    align-items: center;
+  .hero-section > section > .container-with-elements > img {
+    position: relative;
+    top: 50px;
   }
   .container-text-img {
     width: 50%;
